--- a/umbrello/dialogs/exportallviewsdialogbase.ui
+++ b/umbrello/dialogs/exportallviewsdialogbase.ui
@@ -1,42 +1,43 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>ExportAllViewsDialogBase</class>
- <widget class="QDialog" name="ExportAllViewsDialogBase" >
-  <property name="geometry" >
+ <widget class="QWidget" name="ExportAllViewsDialogBase">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>366</width>
-    <height>197</height>
+    <height>157</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Export All Views</string>
   </property>
-  <property name="sizeGripEnabled" >
+  <property name="sizeGripEnabled" stdset="0">
    <bool>true</bool>
   </property>
-  <layout class="QVBoxLayout" >
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QVBoxLayout" >
+    <layout class="QVBoxLayout">
      <item>
-      <widget class="QLabel" name="kURLRequesterLabel" >
-       <property name="toolTip" >
+      <widget class="QLabel" name="kURLRequesterLabel">
+       <property name="toolTip">
         <string>The base directory used to save the images</string>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>&amp;Directory to save the diagrams in:</string>
        </property>
-       <property name="wordWrap" >
+       <property name="wordWrap">
         <bool>false</bool>
        </property>
-       <property name="buddy" >
+       <property name="buddy">
         <cstring>m_kURL</cstring>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="KUrlRequester" name="m_kURL" >
-       <property name="toolTip" >
+      <widget class="KUrlRequester" name="m_kURL">
+       <property name="toolTip">
         <string>The base directory used to save the images</string>
        </property>
       </widget>
@@ -46,17 +47,17 @@
    <item>
     <layout class="QHBoxLayout" name="ui_imageTypeLayout">
      <item>
-      <widget class="QLabel" name="ui_imageTypeLabel" >
-       <property name="toolTip" >
+      <widget class="QLabel" name="ui_imageTypeLabel">
+       <property name="toolTip">
         <string>The format that the images will be exported to</string>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>&amp;Image type:</string>
        </property>
-       <property name="wordWrap" >
+       <property name="wordWrap">
         <bool>false</bool>
        </property>
-       <property name="buddy" >
+       <property name="buddy">
         <cstring>m_imageType</cstring>
        </property>
       </widget>
@@ -64,103 +65,23 @@
     </layout>
    </item>
    <item>
-    <widget class="QCheckBox" name="m_useFolders" >
-     <property name="toolTip" >
+    <widget class="QCheckBox" name="m_useFolders">
+     <property name="toolTip">
       <string>Create in the target directory the same tree structure used
 in the document to store the views</string>
      </property>
-     <property name="whatsThis" >
+     <property name="whatsThis">
       <string>The views are stored in folders in the document. The same tree structure used in the document to store the views can be created in the selected base directory with this option.
 Only the folders made by the user are created in the base directory (Logical view, use case view and so on are not created).</string>
      </property>
-     <property name="text" >
+     <property name="text">
       <string>Use &amp;folders</string>
      </property>
     </widget>
    </item>
-   <item>
-    <spacer>
-     <property name="orientation" >
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType" >
-      <enum>QSizePolicy::Expanding</enum>
-     </property>
-     <property name="sizeHint" >
-      <size>
-       <width>20</width>
-       <height>10</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" >
-     <property name="spacing" >
-      <number>6</number>
-     </property>
-     <property name="leftMargin" >
-      <number>0</number>
-     </property>
-     <property name="topMargin" >
-      <number>0</number>
-     </property>
-     <property name="rightMargin" >
-      <number>0</number>
-     </property>
-     <property name="bottomMargin" >
-      <number>0</number>
-     </property>
-     <item>
-      <spacer>
-       <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeType" >
-        <enum>QSizePolicy::Expanding</enum>
-       </property>
-       <property name="sizeHint" >
-        <size>
-         <width>20</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="buttonOk" >
-       <property name="text" >
-        <string>&amp;OK</string>
-       </property>
-       <property name="shortcut" >
-        <string/>
-       </property>
-       <property name="autoDefault" >
-        <bool>true</bool>
-       </property>
-       <property name="default" >
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="buttonCancel" >
-       <property name="text" >
-        <string>&amp;Cancel</string>
-       </property>
-       <property name="shortcut" >
-        <string/>
-       </property>
-       <property name="autoDefault" >
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
   </layout>
  </widget>
-  <customwidgets>
+ <customwidgets>
   <customwidget>
    <class>KUrlRequester</class>
    <extends>QFrame</extends>
@@ -168,43 +89,10 @@ Only the folders made by the user are created in the base directory (Logical vie
   </customwidget>
  </customwidgets>
  <includes>
-  <include location="local" >kurlrequester.h</include>
-  <include location="local" >klineedit.h</include>
-  <include location="local" >kpushbutton.h</include>
+  <include location="local">kurlrequester.h</include>
+  <include location="local">klineedit.h</include>
+  <include location="local">kpushbutton.h</include>
  </includes>
  <resources/>
- <connections>
-  <connection>
-   <sender>buttonOk</sender>
-   <signal>clicked()</signal>
-   <receiver>ExportAllViewsDialogBase</receiver>
-   <slot>accept()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>20</x>
-     <y>20</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>20</x>
-     <y>20</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>buttonCancel</sender>
-   <signal>clicked()</signal>
-   <receiver>ExportAllViewsDialogBase</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>20</x>
-     <y>20</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>20</x>
-     <y>20</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
