--- a/umbrello/codeimpwizard/codeimpselectpage.ui
+++ b/umbrello/codeimpwizard/codeimpselectpage.ui
@@ -21,63 +21,85 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QVBoxLayout" name="ui_topLayout">
-     <property name="spacing">
-      <number>15</number>
-     </property>
+    <widget class="QWidget" name="ui_inputWidget" native="true">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="spacing">
+       <number>20</number>
+      </property>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="ui_languageLayout">
      <item>
-      <layout class="QVBoxLayout" name="ui_directoryLayout">
-       <item>
-        <widget class="QLabel" name="ui_URLRequesterLabel">
-         <property name="toolTip">
-          <string>The base directory that contains the project</string>
-         </property>
-         <property name="text">
-          <string>&amp;Directory of the project:</string>
-         </property>
-         <property name="wordWrap">
-          <bool>false</bool>
-         </property>
-         <property name="buddy">
-          <cstring>ui_kURL</cstring>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="KUrlRequester" name="ui_kURL">
-         <property name="toolTip">
-          <string>The base directory that contains the project</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="ui_subdirCheckBox">
+      <widget class="QLabel" name="ui_languageLabel">
+       <property name="toolTip">
+        <string>The language of the project.</string>
+       </property>
        <property name="text">
-        <string>Include Subdirectories</string>
+        <string>Programming Language:</string>
+       </property>
+       <property name="wordWrap">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
      <item>
-      <layout class="QFormLayout" name="ui_languageLayout">
-       <item row="0" column="0">
-        <widget class="QLabel" name="ui_languageLabel">
-         <property name="toolTip">
-          <string>The language of the project</string>
-         </property>
-         <property name="text">
-          <string>Programming Language:</string>
-         </property>
-         <property name="wordWrap">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="KComboBox" name="ui_languageBox"/>
-       </item>
-      </layout>
+      <widget class="KComboBox" name="ui_languageBox"/>
+     </item>
+     <item>
+      <spacer name="ui_languageSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="ui_subdirCheckBox">
+       <property name="text">
+        <string>Include Subdirectories.</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="ui_fileExtLayout">
+     <item>
+      <widget class="QLabel" name="ui_fileExtLabel">
+       <property name="text">
+        <string>List of file extensions</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="ui_fileExtLineEdit">
+       <property name="maximumSize">
+        <size>
+         <width>180</width>
+         <height>16777215</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="ui_fileExtSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>30</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
@@ -86,6 +108,9 @@
    </item>
    <item>
     <layout class="QHBoxLayout" name="ui_commandButtonLayout">
+     <property name="spacing">
+      <number>20</number>
+     </property>
      <item>
       <widget class="QPushButton" name="ui_deselectAllButton">
        <property name="text">
@@ -126,12 +151,6 @@
   </layout>
  </widget>
  <customwidgets>
-  <customwidget>
-   <class>KUrlRequester</class>
-   <extends>QFrame</extends>
-   <header>kurlrequester.h</header>
-   <container>1</container>
-  </customwidget>
   <customwidget>
    <class>KComboBox</class>
    <extends>QComboBox</extends>
