--- a/umbrello/dialogs/umlrolepropertiesbase.ui
+++ b/umbrello/dialogs/umlrolepropertiesbase.ui
@@ -141,7 +141,7 @@
      </property>
      <layout class="QVBoxLayout" >
       <item>
-       <widget class="Q3TextEdit" name="ui_pDocTE" />
+       <widget class="QTextEdit" name="ui_pDocTE" />
       </item>
      </layout>
     </widget>
