--- a/umbrello/dialogs/umlrolepropertiesbase.ui
+++ b/umbrello/dialogs/umlrolepropertiesbase.ui
@@ -141,7 +141,7 @@
      </property>
      <layout class="QVBoxLayout" >
       <item>
-       <widget class="QTextEdit" name="ui_pDocTE" />
+       <widget class="KTextEdit" name="ui_pDocTE" />
       </item>
      </layout>
     </widget>
@@ -159,6 +159,11 @@
    <class>KLineEdit</class>
    <extends>QLineEdit</extends>
    <header>klineedit.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KTextEdit</class>
+   <extends>QTextEdit</extends>
+   <header>ktextedit.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
